k8s/mon/dashboard/gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ExternalName
  externalName: grafana.ingress-nginx.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mon-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: acme-prod
    nginx.ingress.kubernetes.io/auth-tls-secret: default/uwsca-ops
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${CLUSTER_HOST}-dashboard.uws.talkingpts.org
      secretName: mon-dashboard-certificate
  rules:
    - host: ${CLUSTER_HOST}-dashboard.uws.talkingpts.org
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: grafana
                port:
                  number: 3000
